Cambié las imágenes y agregué unas cositas

--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ p {
 .hero__image {
   background-image: var(--hero-image);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: 80%;
   background-size: cover;
   background-attachment: var(--hero-attachment);
 }
@@ -924,10 +924,38 @@ a[href="#runas"] {
 
 /************************* HABILIDADES  **************************/
 .champion__info--skills {
+  display: grid;
+  grid-template-columns: 202px 1fr;
+  grid-template-rows: repeat(2, 1fr);
+  margin-top: 24px;
   margin-top: 0.5rem;
   padding-top: 0.5rem;
   border-top: thin solid var(--border-first-color);
 }
+
+.skill__priority--path {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.arrow-right {
+  margin: 0 5px;
+  width: 13px;
+}
+
+.champion__skill--path {
+  padding-top: 0.5rem;
+  margin-top: 1rem;
+  border-top: 1px solid var(--border-first-color);
+  grid-column: 1/3;
+  grid-row: 2/3;
+}
+
+.champion__skill--priority {
+  grid-column: 1/3;
+}
+
 /****** Cartas Proyecto *********/
 .proyect__card {
   position: relative;
@@ -1152,6 +1180,9 @@ a[href="#runas"] {
 /****************************** MEDIA 1024 *************************** */
 
 @media screen and (min-width: 1024px) {
+  .hero__image {
+    background-position: center;
+  }
   .portrait__image {
     content: url("assets/Challenger.png");
     border-radius: 10%;
