--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ p {
 .hero__image {
   background-image: var(--hero-image);
   background-repeat: no-repeat;
-  background-position: 80%;
+  background-position: 60%;
   background-size: cover;
   background-attachment: var(--hero-attachment);
 }
@@ -926,8 +926,6 @@ a[href="#runas"] {
 .champion__info--skills {
   display: grid;
   grid-template-columns: 202px 1fr;
-  grid-template-rows: repeat(2, 1fr);
-  margin-top: 24px;
   margin-top: 0.5rem;
   padding-top: 0.5rem;
   border-top: thin solid var(--border-first-color);
@@ -944,6 +942,7 @@ a[href="#runas"] {
   width: 13px;
 }
 
+/************************* SKILL TABLE *******************/
 .champion__skill--path {
   padding-top: 0.5rem;
   margin-top: 1rem;
@@ -952,8 +951,90 @@ a[href="#runas"] {
   grid-row: 2/3;
 }
 
+.skill__path--container {
+  display: grid;
+  overflow: auto;
+}
+
 .champion__skill--priority {
   grid-column: 1/3;
+}
+
+.skill__order {
+  display: flex;
+  flex: 1 1;
+  color: #fff;
+}
+
+.skill__order--row {
+  display: flex;
+  margin-bottom: 6px;
+}
+
+.skill__img--label {
+  flex: 0 0 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 3px;
+  position: relative;
+  color: var(--white-color);
+}
+
+.skill__img--label img {
+  flex: 0 0 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 3px;
+}
+
+.skill__key--label {
+  bottom: 0;
+  right: 0;
+  transform: translate(30%, 30%);
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: var(--second-color);
+  font-size: 9px;
+  font-weight: 700;
+  pointer-events: none;
+}
+
+.no__skill--up,
+.skill__up,
+.skill__up--max {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 6px;
+  font-size: 10px;
+  width: 24px;
+  height: 24px;
+  border-radius: 3px;
+  color: #fff;
+  background-color: rgba(37, 37, 75, 0.5);
+}
+
+.skill__up {
+  background-color: var(--first-color);
+  font-weight: 500;
+}
+
+.skill__up--max {
+  background-color: #e0af46;
+  font-weight: 800;
+}
+
+.blank__row {
+  margin-left: 6px;
+  height: 24px;
+  width: 100%;
+  border-radius: 3px;
+  background-color: rgba(37, 37, 75, 0.5);
 }
 
 /****** Cartas Proyecto *********/
