--- a/style.css
+++ b/style.css
@@ -949,7 +949,7 @@ a[href="#runas"] {
 
 .skill__path--container {
   display: grid;
-  overflow: auto;
+  overflow-x: auto;
   justify-items: center;
 }
 
@@ -1320,5 +1320,44 @@ a[href="#runas"] {
 
   .proyect .section__title {
     grid-column: span 3;
+  }
+
+  /***********Runes Section ************/
+  .champion__runes--tree {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(3, auto);
+  }
+  .rune__tree {
+    grid-column: 1/2;
+    grid-row: 1/4;
+    padding-bottom: 0;
+    border-bottom: none;
+    padding-right: 1rem;
+  }
+  .champion__build--spells {
+    grid-column: 2/4;
+    grid-row: 1/2;
+    padding-top: 0;
+  }
+  .champion__info--skills {
+    grid-column: 2/4;
+    grid-row: 2/4;
+    flex-direction: column;
+    margin-top: 0;
+    padding-top: 0;
+    min-width: 100%;
+  }
+
+  .build__container {
+    column-gap: 10px;
+  }
+
+  .champion__skill--priority {
+    padding-top: 1rem;
+  }
+
+  .champion__skill--label {
+    margin: 0 0.8rem;
   }
 }
