--- a/style.css
+++ b/style.css
@@ -71,7 +71,8 @@ a {
 
 h1 {
   margin: 0;
-  font-size: 2rem;
+  font-size: 3rem;
+  color: var(--first-color);
 }
 
 h2 {
@@ -614,6 +615,33 @@ progress::-moz-progress-bar {
 /* Acerca */
 .about > article {
   margin-bottom: 2rem;
+}
+
+.portrait__image {
+  border-radius: 5%;
+  box-shadow: 0px 0px 14px 6px #f8d68b;
+}
+
+.text__rank--list li {
+  margin-bottom: 10px;
+}
+
+.text__rank--list li:nth-child(n + 7) b {
+  color: #faa75b;
+}
+.text__rank--list li:first-child b {
+  color: #8298a3;
+}
+.text__rank--list li:nth-child(2) b {
+  color: #bf7b32;
+}
+.text__rank--list li:nth-child(3) b,
+.text__rank--list li:nth-child(4) b {
+  color: #8ebbd9;
+}
+.text__rank--list li:nth-child(5) b,
+.text__rank--list li:nth-child(6) b {
+  color: #d226e4;
 }
 
 /* Sección de contacto */
@@ -1390,7 +1418,6 @@ a[href="#runas"] {
   .portrait__image {
     content: url("assets/Challenger.png");
     border-radius: 10%;
-    box-shadow: 0px 0px 14px 6px #f8d68b;
     text-align: center;
   }
   .about {
