--- a/style.css
+++ b/style.css
@@ -118,88 +118,6 @@ main {
   color: white;
 }
 
-/****************************************** Componentes ***************************************/
-
-/* Carousel */
-
-@keyframes carousel-slide {
-  0% {
-    transform: translateX(0%);
-  }
-  25% {
-    transform: translateX(-25%);
-  }
-  50% {
-    transform: translateX(-50%);
-  }
-  75% {
-    transform: translateX(-75%);
-  }
-}
-
-.testimonials__carousel {
-  margin: 2rem auto;
-  padding: 2rem 0;
-  max-width: 350px;
-  text-align: center;
-  background-color: var(--carousel-bg-color);
-  overflow-x: hidden;
-}
-
-.testimonials__carousel .slides {
-  width: 400%;
-  padding-left: 0;
-  display: flex;
-  list-style: none;
-  transition: transform 0.5s ease-in-out;
-  animation: carousel-slide 12s ease-in-out;
-}
-
-.testimonials__carousel input {
-  display: none;
-}
-
-.testimonials__carousel label {
-  border: medium solid var(--gray-dark-color);
-  border-radius: 50%;
-  cursor: pointer;
-  margin: 0 0.75rem;
-  display: inline-block;
-  width: 0.75rem;
-  height: 0.75rem;
-}
-
-#slide-1:checked ~ .slides {
-  transform: translateX(0%);
-}
-#slide-2:checked ~ .slides {
-  transform: translateX(-25%);
-}
-#slide-3:checked ~ .slides {
-  transform: translateX(-50%);
-}
-#slide-4:checked ~ .slides {
-  transform: translateX(-75%);
-}
-
-#slide-1:checked ~ .testimonials__carousel--slides label#dot-1,
-#slide-2:checked ~ .testimonials__carousel--slides label#dot-2,
-#slide-3:checked ~ .testimonials__carousel--slides label#dot-3,
-#slide-4:checked ~ .testimonials__carousel--slides label#dot-4 {
-  background-color: var(--gray-dark-color);
-}
-
-@media screen and (min-width: 720px) {
-  .testimonials__carousel {
-    max-width: 600px;
-  }
-}
-@media screen and (min-width: 1024px) {
-  .testimonials__carousel {
-    max-width: 800px;
-  }
-}
-
 /******* Contact Form *******/
 .contact__form {
   margin: 2rem auto;
@@ -517,11 +435,6 @@ progress::-moz-progress-bar {
   font-size: 0.85rem;
 }
 /****************************************** UTILIDADES ***************************************/
-.avatar {
-  border-radius: 50%;
-  width: 150px;
-  height: 150px;
-}
 
 .box-shadow-1 {
   box-shadow: var(--box-shadow);
@@ -1242,6 +1155,80 @@ a[href="#runas"] {
   color: white;
   text-align: center;
   padding: 0.5rem;
+}
+
+/* SKINS */
+
+.skins__content {
+  width: 100%;
+}
+
+.carrousel {
+  position: relative;
+  margin: 1rem auto;
+  text-align: center;
+  box-shadow: 0px 0px 20px 4px;
+}
+
+.carrousel__slides {
+  position: relative;
+  height: 700px;
+}
+
+.carrousel__slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 1s ease-in-out;
+}
+
+.carrousel__slide h3 {
+  margin: 0.5rem;
+  font-size: 2rem;
+  color: var(--first-color);
+  text-shadow: -1px 0px 4px var(--link-color);
+}
+
+.carrousel__slide img {
+  height: inherit;
+  width: inherit;
+  object-fit: cover;
+  object-position: 50% 0%;
+}
+
+.carrousel__slide.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.carrousel__btns {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  display: flex;
+  justify-content: space-between;
+  font-size: 3rem;
+  font-weight: bold;
+}
+
+.carrousel a {
+  display: block;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  border: thin solid var(--secondary-color);
+  text-decoration: none;
+  background-color: var(--main-color);
+  color: var(--hero-text-color);
+  transition: all 0.3s ease;
+}
+
+.carrousel a:hover {
+  color: var(--first-color);
 }
 
 /****************************** MEDIA 720 *************************** */
