--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ main {
   background-color: var(--white-color);
   outline: none;
   border: none;
-  transition: all 0.3s ease-in-out;
+  transition: border-bottom 0.3s ease-in-out;
 }
 
 .contact__form input {
@@ -311,24 +311,27 @@ input:checked + .slider:before {
 .nav__menu {
   position: fixed;
   left: 0;
+  right: 0;
   bottom: var(--header-height);
   width: 100%;
   display: flex;
   flex-direction: column;
   background-color: var(--white-color);
   opacity: 0;
-  transition: opacity 0.5s ease;
+  transition: transform 0.4s ease, opacity 0.2s ease;
+  transform: translate(0, 100%);
   pointer-events: none;
 }
 
 .nav__menu.is-active {
+  transform: translate(0, 0);
   opacity: 1;
   pointer-events: auto;
 }
 
 .nav__menu a {
   padding: 1rem;
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   font-weight: bold;
   text-align: center;
   color: var(--first-color);
@@ -351,6 +354,7 @@ input:checked + .slider:before {
     pointer-events: auto;
     width: auto;
     flex-direction: row;
+    transform: none;
   }
 
   .nav__menu a {
@@ -571,7 +575,7 @@ progress::-moz-progress-bar {
 .social-media svg {
   width: 1.7rem;
   height: 1.7rem;
-  transition: 0.3s all ease-in-out;
+  transition: 0.3s fill ease-in-out;
   fill: var(--text-color);
 }
 
@@ -629,18 +633,19 @@ progress::-moz-progress-bar {
   padding: 1rem;
   width: 100%;
   text-align: center;
-  transition: all 0.3s ease-in-out;
+  transition: box-shadow 0.3s ease-in-out;
 }
 
 .champion__card h3 {
   color: var(--title-color);
-  transition: all 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
 }
 
 .champion__card img {
   border-radius: 50%;
   filter: grayscale(1);
-  transition: all 0.3s ease-in-out;
+  transition: filter 0.3s ease-in-out;
+  border: 2px solid var(--link-color);
 }
 
 .champion__card p {
@@ -659,6 +664,16 @@ progress::-moz-progress-bar {
 
 .champion__card:hover > img {
   filter: grayscale(0);
+  animation: carta 1.2s ease-in-out infinite alternate;
+}
+
+@keyframes carta {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
 }
 
 /* Champions Runes */
@@ -960,7 +975,7 @@ progress::-moz-progress-bar {
   border: 1px solid #7582c8;
 }
 
-.build__container img[alt="Goredrinker"] {
+.build__container img:first-child {
   border: 1px solid #f8b218;
 }
 
@@ -1157,7 +1172,247 @@ progress::-moz-progress-bar {
   padding: 0.5rem;
 }
 
-/* SKINS */
+.heart {
+  animation: pulse 1s linear infinite;
+  display: inline-block;
+  position: relative;
+  width: 14px;
+  height: 10px;
+}
+
+.heart::after,
+.heart::before {
+  position: absolute;
+  content: "";
+  left: 7px;
+  top: 0;
+  width: 7px;
+  height: 12px;
+  background-color: var(--text-color);
+  transform: rotate(-45deg);
+  transform-origin: 0 100%;
+  border-radius: 7px 7px 0 0;
+}
+
+.heart::after {
+  left: 0;
+  transform: rotate(45deg);
+  transform-origin: 100% 100%;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1.1);
+  }
+  50% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+/**************************** Counters y Estadísticas *************************/
+.counters__container {
+  background-image: linear-gradient(
+    227deg,
+    var(--second-color) -130%,
+    var(--white-gray)
+  );
+  border-radius: 10px;
+  padding: 1rem;
+  border-radius: 10px;
+}
+.counters__header {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin-bottom: 2rem;
+}
+
+.stat__data svg {
+  width: 28px;
+  fill: #d0a85c;
+}
+
+.champ__data {
+  grid-row: 1/2;
+  grid-column: 1/2;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.champ__data--name .stat__data {
+  height: 40px;
+  padding-bottom: 0.5rem;
+}
+
+.champ__data img {
+  margin-bottom: 0.5rem;
+  border: medium solid var(--first-color);
+  border-radius: 10%;
+}
+
+.champ__data--name {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.champ__data--name h2 {
+  margin-bottom: 0.5rem;
+  color: var(--first-color);
+}
+
+.champ__data--name input {
+  color: var(--text-color);
+  background-color: var(--white-color);
+  outline: none;
+  border: none;
+  border-bottom: thin solid var(--gray-dark-color);
+  font-size: 1rem;
+  width: 120px;
+  border-radius: 5px;
+}
+
+.stats__container {
+  grid-row: 1/3;
+  grid-column: 2/3;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.stat__data {
+  display: flex;
+  align-items: center;
+}
+
+.stat__data p {
+  margin: 0;
+  margin-left: 1rem;
+  font-weight: bold;
+  font-size: 1rem;
+}
+
+.stat__data img {
+  width: 1rem;
+  margin-left: 1rem;
+}
+
+.stat__data.hp img {
+  filter: invert(40%) sepia(87%) saturate(520%) hue-rotate(69deg)
+    brightness(108%) contrast(86%);
+}
+.stat__data.attack img {
+  filter: invert(40%) sepia(56%) saturate(493%) hue-rotate(332deg)
+    brightness(95%) contrast(103%);
+}
+.stat__data.attackS img {
+  filter: invert(20%) sepia(100%) saturate(595%) hue-rotate(357deg)
+    brightness(86%) contrast(93%);
+}
+.stat__data.ms img {
+  filter: invert(53%) sepia(87%) saturate(520%) hue-rotate(173deg)
+    brightness(108%) contrast(86%);
+}
+.stat__data.armor img {
+  filter: invert(40%) sepia(100%) saturate(405%) hue-rotate(13deg)
+    brightness(98%) contrast(96%);
+}
+.stat__data.mr img {
+  filter: invert(40%) sepia(89%) saturate(444%) hue-rotate(126deg)
+    brightness(102%) contrast(80%);
+}
+
+.counters__matchups {
+  margin-bottom: 1rem;
+}
+
+/* Para sacar las flechitas del summary */
+details > summary {
+  list-style: none;
+}
+details > summary::-webkit-details-marker {
+  display: none;
+}
+
+.hard summary {
+  background: linear-gradient(rgba(255, 78, 80, 0.45), rgba(255, 78, 80, 0.7)),
+    linear-gradient(#1c1c32, #1c1c32);
+  border-radius: 10px;
+  margin-bottom: 1rem;
+}
+
+.easy summary {
+  background: linear-gradient(rgb(8 166 255 / 75%), rgb(108 225 255 / 70%)),
+    linear-gradient(#1c1c32, #1c1c32);
+  border-radius: 10px;
+  margin-bottom: 1rem;
+}
+
+summary img {
+  width: 40px;
+  border-radius: 50%;
+}
+
+summary {
+  display: flex;
+  padding: 0.5rem 1rem;
+  align-items: center;
+}
+
+summary h3 {
+  margin-left: 0.8rem;
+  color: var(--hero-text-color);
+}
+
+.matchups__tips ul {
+  list-style-type: circle;
+  padding-left: 35px;
+}
+.matchups__tips ul li {
+  margin-bottom: 0.5rem;
+}
+
+.matchups__tips b {
+  color: var(--first-color);
+}
+
+details[open] summary ~ * {
+  animation: summaryA 0.5s ease-in-out;
+}
+
+@keyframes summaryA {
+  0% {
+    opacity: 0;
+    margin-left: -10px;
+  }
+  100% {
+    opacity: 1;
+    margin-left: 0px;
+  }
+}
+
+.tips__container {
+  padding-top: 1rem;
+}
+
+.tips__list ul {
+  list-style-type: circle;
+  padding-left: 35px;
+}
+
+.tips__list ul li {
+  margin-bottom: 1rem;
+}
+
+.tips__list b {
+  color: var(--first-color);
+}
+
+/********************************* SKINS **********************************/
 
 .skins__content {
   width: 100%;
@@ -1183,14 +1438,13 @@ progress::-moz-progress-bar {
   width: 100%;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.5s ease-in;
 }
 
 .carrousel__slide h3 {
   margin: 0.5rem;
   font-size: 2rem;
   color: var(--first-color);
-  text-shadow: -1px 0px 4px var(--link-color);
+  text-shadow: 0px 0px 3px var(--link-color);
 }
 
 .carrousel__slide img {
@@ -1203,6 +1457,18 @@ progress::-moz-progress-bar {
 .carrousel__slide.active {
   opacity: 1;
   visibility: visible;
+}
+.carrousel__slide.active img {
+  animation: test 0.4s;
+}
+
+@keyframes test {
+  0% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .carrousel__btns {
@@ -1224,7 +1490,7 @@ progress::-moz-progress-bar {
   text-decoration: none;
   background-color: var(--main-color);
   color: var(--hero-text-color);
-  transition: all 0.3s ease;
+  transition: color 0.3s ease;
 }
 
 .carrousel a:hover {
@@ -1365,6 +1631,8 @@ progress::-moz-progress-bar {
     height: 40px;
   }
 
+  /******************* STATS ESTADÍSTICAS ************************/
+
   /************* MODAL ***********/
   .modal__proyect {
     flex-direction: row;
@@ -1400,6 +1668,35 @@ progress::-moz-progress-bar {
     padding-top: 0;
     margin-top: 0;
     border-top: none;
+  }
+
+  /******************* STATS ESTADÍSTICAS ************************/
+  .counters__header {
+    grid-template-columns: 30% 25% 30%;
+  }
+  .champ__data img {
+    /* content: url(assets/Aatrox_0.jpg); */
+    border: none;
+    width: 75%;
+  }
+  .stats__container {
+    grid-column: 3/4;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+  .champ__data--name {
+    margin-right: 1rem;
+  }
+  .champ__data--name h2 {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+  }
+  .champ__data--name .stat__data {
+    margin-bottom: 1rem;
+  }
+  .stat__data p {
+    font-size: 1.2rem;
   }
 }
 
@@ -1490,6 +1787,39 @@ progress::-moz-progress-bar {
 
   .champion__skill--label {
     margin: 0 0.8rem;
+  }
+
+  /************** STATS COUNTERS *********/
+  .counters__container {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-template-rows: 1fr 30%;
+  }
+  .counters__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    grid-row: 1/3;
+  }
+  .counters__content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.2rem;
+  }
+
+  summary {
+    margin-bottom: 1.5rem;
+  }
+  .champ__data--name {
+    margin-bottom: 1rem;
+    margin-right: 0;
+  }
+
+  .stats__container {
+    gap: 0.8rem;
+  }
+  .counters__matchups {
+    margin-bottom: 0;
   }
 }
 
