--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
   --box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.25);
   --hero-image: url("assets/Aatrox-wall-2.jpg");
   --hero-text-color: #fff;
+  --drop-shadow: drop-shadow(0px 6px 20px #27f9ff);
 }
 
 :root.dark-mode {
@@ -39,6 +40,7 @@
   --hero-image: url("assets/aatrox.jpg");
   --black-alpha-color: rgba(0, 0, 0, 0.5);
   --white-alpha-color: rgba(0, 0, 0, 0.5);
+  --drop-shadow: drop-shadow(0px 6px 20px #faa75b);
 }
 
 /****************************************** RESET  ***************************************/
@@ -537,7 +539,7 @@ progress::-moz-progress-bar {
 
 .chall__icon {
   width: 300px;
-  filter: drop-shadow(0px 6px 20px #faa75b);
+  filter: var(--drop-shadow);
 }
 
 .about__data {
@@ -575,11 +577,33 @@ progress::-moz-progress-bar {
 }
 .text__rank--list li:nth-child(3) b,
 .text__rank--list li:nth-child(4) b {
-  color: #8ebbd9;
+  color: #27f9ff;
 }
 .text__rank--list li:nth-child(5) b,
 .text__rank--list li:nth-child(6) b {
   color: #d226e4;
+}
+
+.rank__data {
+  display: flex;
+  column-gap: 1rem;
+}
+
+.rank__data p {
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+
+.win {
+  color: #12be12;
+}
+
+.losses {
+  color: var(--first-color);
+}
+
+.lp {
+  color: #faa75b;
 }
 
 /* Sección de contacto */
