--- a/style.css
+++ b/style.css
@@ -688,7 +688,7 @@ progress::-moz-progress-bar {
   padding: 1rem;
   width: 100%;
   text-align: center;
-  transition: box-shadow 0.3s ease-in-out;
+  transition: box-shadow 0.5s ease-in-out;
 }
 
 .champion__card h3 {
@@ -727,7 +727,7 @@ progress::-moz-progress-bar {
     transform: rotateY(0deg);
   }
   100% {
-    transform: rotateY(360deg);
+    transform: rotateY(360deg) scale(1.1);
   }
 }
 
